--- a/HW_21_Autolayout_Part_2/Base.lproj/Main.storyboard
+++ b/HW_21_Autolayout_Part_2/Base.lproj/Main.storyboard
@@ -1,24 +1,155 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Layout Screen View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LayoutScreenViewController" customModule="HW_21_Autolayout_Part_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sG5-zJ-UeM">
+                                <rect key="frame" x="20" y="40" width="280" height="110"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance between views:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9d-l7-BML">
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="VFN-dm-wuP">
+                                        <rect key="frame" x="-2" y="40" width="284" height="31"/>
+                                        <connections>
+                                            <action selector="distanceValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Gfc-zu-Egb"/>
+                                        </connections>
+                                    </slider>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="75v-xk-Pz0">
+                                        <rect key="frame" x="0.0" y="80" width="280" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Margin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIB-6u-uvt">
+                                                <rect key="frame" x="0.0" y="0.0" width="85.5" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="85.5" id="m5O-5j-Eq9"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JT5-0p-uFF">
+                                                <rect key="frame" x="105.5" y="0.0" width="113.5" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-dx-Y2x">
+                                                <rect key="frame" x="239" y="0.0" width="41" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="41" id="sxi-Jw-Sk1"/>
+                                                </constraints>
+                                                <state key="normal" title="Setup"/>
+                                                <connections>
+                                                    <action selector="setupButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gfz-Ku-dB2"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-uo-VBr" userLabel="ColorsViewsContainer">
+                                <rect key="frame" x="25" y="170" width="270" height="100"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CDC-LI-05e">
+                                        <rect key="frame" x="30" y="0.0" width="80" height="100"/>
+                                        <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="HpU-4F-Aut"/>
+                                            <constraint firstAttribute="width" constant="80" id="gdL-16-f02"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="odj-oK-LN3">
+                                        <rect key="frame" x="160" y="0.0" width="80" height="100"/>
+                                        <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="odj-oK-LN3" firstAttribute="top" secondItem="hLy-uo-VBr" secondAttribute="top" id="1Tb-DT-M5R"/>
+                                    <constraint firstAttribute="bottom" secondItem="odj-oK-LN3" secondAttribute="bottom" id="3la-AK-nU2"/>
+                                    <constraint firstAttribute="trailing" secondItem="odj-oK-LN3" secondAttribute="trailing" constant="30" id="Rrg-hS-vOa"/>
+                                    <constraint firstAttribute="width" constant="270" id="S7X-qn-Nf2"/>
+                                    <constraint firstItem="CDC-LI-05e" firstAttribute="top" secondItem="hLy-uo-VBr" secondAttribute="top" id="Smi-vs-LZ6"/>
+                                    <constraint firstItem="CDC-LI-05e" firstAttribute="width" secondItem="odj-oK-LN3" secondAttribute="width" id="W4g-WG-IOw"/>
+                                    <constraint firstItem="CDC-LI-05e" firstAttribute="leading" secondItem="hLy-uo-VBr" secondAttribute="leading" constant="30" id="Xtg-9E-aKE"/>
+                                    <constraint firstAttribute="bottom" secondItem="CDC-LI-05e" secondAttribute="bottom" id="cqN-82-GKo"/>
+                                    <constraint firstItem="CDC-LI-05e" firstAttribute="height" secondItem="odj-oK-LN3" secondAttribute="height" id="etz-SH-Sfj"/>
+                                    <constraint firstAttribute="height" constant="100" id="xGK-vX-YIa"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwb-Gl-ax6">
+                                <rect key="frame" x="90" y="488" width="140" height="60"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Av2-1Y-Gbc"/>
+                                    <constraint firstAttribute="width" constant="140" id="w2U-oo-vrZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="NEXT">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="s4J-JT-Jsu" kind="show" id="R5M-tD-Dnb"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="hLy-uo-VBr" firstAttribute="top" secondItem="sG5-zJ-UeM" secondAttribute="bottom" constant="20" id="1FP-Mv-gtC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sG5-zJ-UeM" secondAttribute="trailing" constant="20" id="CwQ-Kf-EdX"/>
+                            <constraint firstItem="hLy-uo-VBr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TJg-s5-bMn"/>
+                            <constraint firstItem="sG5-zJ-UeM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mYC-p3-hXG"/>
+                            <constraint firstItem="qwb-Gl-ax6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sD7-KB-CPH"/>
+                            <constraint firstItem="sG5-zJ-UeM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="ulg-fT-uIU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qwb-Gl-ax6" secondAttribute="bottom" constant="20" id="um3-dw-Sxf"/>
+                            <constraint firstItem="sG5-zJ-UeM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zAR-cA-Os1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="colorsViewsContainer" destination="hLy-uo-VBr" id="Neh-B7-USM"/>
+                        <outlet property="distanceSlider" destination="VFN-dm-wuP" id="VfI-Km-ODd"/>
+                        <outlet property="lcLeftMargin" destination="Xtg-9E-aKE" id="bk6-mg-Bm1"/>
+                        <outlet property="lcRightMargin" destination="Rrg-hS-vOa" id="tzz-qq-Nze"/>
+                        <outlet property="lcTopMargin" destination="1FP-Mv-gtC" id="zPT-UU-5bV"/>
+                        <outlet property="topMarginTextField" destination="JT5-0p-uFF" id="cih-oF-c2m"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.375" y="31.690140845070424"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="O3M-do-RP5">
+            <objects>
+                <viewController id="s4J-JT-Jsu" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="n1l-5N-is9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="0PD-6Y-IIC"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b6R-gp-d3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="834" y="32"/>
         </scene>
     </scenes>
 </document>
