--- a/HW_21_Autolayout_Part_2/Base.lproj/Main.storyboard
+++ b/HW_21_Autolayout_Part_2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,26 +15,26 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LayoutScreenViewController" customModule="HW_21_Autolayout_Part_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sG5-zJ-UeM">
-                                <rect key="frame" x="20" y="40" width="280" height="110"/>
+                                <rect key="frame" x="20" y="40" width="335" height="110"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance between views:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9d-l7-BML">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="VFN-dm-wuP">
-                                        <rect key="frame" x="-2" y="40" width="284" height="31"/>
+                                        <rect key="frame" x="-2" y="40" width="339" height="31"/>
                                         <connections>
                                             <action selector="distanceValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Gfc-zu-Egb"/>
                                         </connections>
                                     </slider>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="75v-xk-Pz0">
-                                        <rect key="frame" x="0.0" y="80" width="280" height="30"/>
+                                        <rect key="frame" x="0.0" y="80" width="335" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Margin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIB-6u-uvt">
                                                 <rect key="frame" x="0.0" y="0.0" width="85.5" height="30"/>
@@ -46,13 +46,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JT5-0p-uFF">
-                                                <rect key="frame" x="105.5" y="0.0" width="113.5" height="30"/>
+                                                <rect key="frame" x="105.5" y="0.0" width="168.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-dx-Y2x">
-                                                <rect key="frame" x="239" y="0.0" width="41" height="30"/>
+                                                <rect key="frame" x="294" y="0.0" width="41" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="41" id="sxi-Jw-Sk1"/>
                                                 </constraints>
@@ -66,7 +66,7 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-uo-VBr" userLabel="ColorsViewsContainer">
-                                <rect key="frame" x="25" y="170" width="270" height="100"/>
+                                <rect key="frame" x="52.5" y="170" width="270" height="100"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CDC-LI-05e">
                                         <rect key="frame" x="30" y="0.0" width="80" height="100"/>
@@ -95,7 +95,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwb-Gl-ax6">
-                                <rect key="frame" x="90" y="488" width="140" height="60"/>
+                                <rect key="frame" x="117.5" y="587" width="140" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Av2-1Y-Gbc"/>
@@ -136,20 +136,107 @@
             </objects>
             <point key="canvasLocation" x="24.375" y="31.690140845070424"/>
         </scene>
-        <!--View Controller-->
+        <!--Chess View Controller-->
         <scene sceneID="O3M-do-RP5">
             <objects>
-                <viewController id="s4J-JT-Jsu" sceneMemberID="viewController">
+                <viewController id="s4J-JT-Jsu" customClass="ChessViewController" customModule="HW_21_Autolayout_Part_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n1l-5N-is9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xug-7H-ykP">
+                                <rect key="frame" x="117.5" y="597" width="140" height="50"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="79W-XA-A04"/>
+                                    <constraint firstAttribute="height" constant="50" id="x1H-rc-BLr"/>
+                                </constraints>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="7od-pU-Zda" kind="unwind" unwindAction="backToFirstScreen:" id="ktZ-tN-YcH"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="nFC-6g-7bQ">
+                                <rect key="frame" x="20" y="40" width="335" height="335"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dbc-Dq-IMD">
+                                        <rect key="frame" x="0.0" y="0.0" width="111.5" height="335"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o4d-R5-0wh">
+                                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="111.5"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4z-kV-lNv">
+                                                <rect key="frame" x="0.0" y="111.5" width="111.5" height="112"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wpe-V7-5BT">
+                                                <rect key="frame" x="0.0" y="223.5" width="111.5" height="111.5"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Qj3-fN-ZOh">
+                                        <rect key="frame" x="111.5" y="0.0" width="112" height="335"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qhF-9Z-l7L">
+                                                <rect key="frame" x="0.0" y="0.0" width="112" height="111.5"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fsc-a5-xxq">
+                                                <rect key="frame" x="0.0" y="111.5" width="112" height="112"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qwg-hh-h8j">
+                                                <rect key="frame" x="0.0" y="223.5" width="112" height="111.5"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="XjH-m3-ZD3">
+                                        <rect key="frame" x="223.5" y="0.0" width="111.5" height="335"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AwZ-my-r2e">
+                                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="111.5"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Na2-cj-l8W">
+                                                <rect key="frame" x="0.0" y="111.5" width="111.5" height="112"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ilF-H8-Uzk">
+                                                <rect key="frame" x="0.0" y="223.5" width="111.5" height="111.5"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="750" constant="335" id="UFP-eF-yvn"/>
+                                    <constraint firstAttribute="width" constant="335" id="r5e-Ju-Pph"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nFC-6g-7bQ" firstAttribute="top" secondItem="0PD-6Y-IIC" secondAttribute="top" constant="20" id="CQg-pF-Af1"/>
+                            <constraint firstItem="0PD-6Y-IIC" firstAttribute="bottom" secondItem="xug-7H-ykP" secondAttribute="bottom" constant="20" id="CX2-iI-who"/>
+                            <constraint firstItem="xug-7H-ykP" firstAttribute="centerX" secondItem="n1l-5N-is9" secondAttribute="centerX" id="aff-H6-QxY"/>
+                            <constraint firstItem="nFC-6g-7bQ" firstAttribute="leading" secondItem="0PD-6Y-IIC" secondAttribute="leading" constant="20" id="ujA-BC-JTa"/>
+                            <constraint firstItem="xug-7H-ykP" firstAttribute="top" relation="greaterThanOrEqual" secondItem="nFC-6g-7bQ" secondAttribute="bottom" constant="20" id="vZg-69-0ko"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="0PD-6Y-IIC"/>
                     </view>
+                    <connections>
+                        <outlet property="lcWidthChessView" destination="r5e-Ju-Pph" id="NSW-Z3-Pze"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b6R-gp-d3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="7od-pU-Zda" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="834" y="32"/>
+            <point key="canvasLocation" x="831.20000000000005" y="31.03448275862069"/>
         </scene>
     </scenes>
 </document>
